css/site.styl
@import "resets"
@import "fonts"

$cols = 2
$col = 1100px*0.462
$gutter = 1100px*0.075
.container
  margin: 0 auto
  width: ($col * $cols)+($gutter * $cols)
.row
  clear: both
.col
  float: left
  margin-left: ($gutter/2)
  margin-right: ($gutter/2)
  box-sizing: content-box
for col in 1..$cols
  .col{col}
    width: ( col * $col ) + ( ( col - 1 ) * $gutter )

.grid-sizer
  width: $col + $gutter

.gutter-sizer
  width: $gutter

.u-cf
  clear: both

// VARIABLES

$margin-small = ($gutter)
$margin-basic = ($gutter*2)
$margin-large = ($gutter*5)

$font-size-basic = 17px
$font-leading-basic = 1.35em
$font-tracking-basic = 0.001em

$color-black-soft = rgb(26,26,26)
$color-white-soft = rgb(253,253,253)
$color-taupe = rgb(239,241,241)

$font-alien = 'alienleagueiiital';
$font-luculent-regular = 'luculentregular';
$font-luculent-bold = 'luculentbold';
$font-luculent-italic = 'luculentitalic';
$font-luculent-bold-italic = 'luculentbold_italic';


// TYPOGRAPHY

body
  font-family:$font-luculent-regular,helvetica,arial,sans-serif
  font-size: $font-size-basic
  line-height: $font-leading-basic
  letter-spacing: $font-tracking-basic

h1
  font-size: 3em
  font-family: $font-alien

h2
  font-size: 2em
  font-family: $font-alien

h3
  font-size: 1.5em
  font-family: $font-alien

p
  margin: 0 0 1.7em
  font-family: $font-luculent-regular
  line-height: 1.7em

strong
  font-family: $font-luculent-bold

em
  font-family: $font-luculent-italic

strong em, em strong
  font-family: $font-luculent-bold-italic


// LISTS

ul
  line-height: 1.7em
  margin-bottom: 1.7em
  li
    ul
      margin-bottom: 0
      li:before
        content: "\00a0\00a0";


// LINKS

a, a:active, a:visited
  color: inherit
  text-decoration: none

p
  a, a:active, a:visited
    font-family: $font-luculent-bold


// BASIC

html
  background-color: $color-taupe
  color: $color-black-soft

img
  max-width: 100%
  height: auto


// HEADER

#header
  width: 100%
  height: $margin-basic
  position: fixed
  top: 0
  left: 0
  z-index: 0

#fruitmilk-title
  position: absolute
  width: 100%
  top: 46%
  text-align: center
  font-size: 4em
  letter-spacing: .5em
  line-height: 0


// POSTS LOOP

#main-content
  padding-top: $margin-basic
  padding-bottom: $margin-basic

.section-title
  border: 1px solid $color-black-soft
  border-bottom-width: 0
  border-radius: .5em .5em 0 0
  display: inline-block
  padding: .7em 1em .2em
  margin-bottom: 1em
  font-size: 2em
  text-align: center
  a:link
    text-decoration: none

.item
  position: relative
  margin-bottom: $margin-small
  margin-left: ($gutter/2)
  margin-right: ($gutter/2)
  h1
    text-align: left
    line-height: 1.5em
    a
      display: inline-block
  img
    width: 100%

.item-title
  position: absolute
  top: 1em
  width: 100%
  text-align: center
  line-height: 2em

#pagination
  width: 100%


// INSTAGRAM
a.instagram-link
  .instagram-image
    float: left
    width: 49%
    margin-bottom: 1%
  &:nth-child(odd)
    .instagram-image
      margin-right: 1%


// FORM

form
  width: 100%
  font-family: $font-luculent-regular
  margin-bottom: 1.7em

input
  display: inline-block
  -webkit-appearance: none
  -moz-appearance: none
  border: 0
  background: none
  font-family: $font-luculent-regular
  padding: 0 0 0.4em
  margin-bottom: 1.3em
  &:focus
    outline: 0

#subscribe-email
  width: 70%
  border: solid $color-black-soft
  border-width: 0 0 1px

#subscribe-submit
  font-family: $font-luculent-bold
  width: 27%


// FOOTER

#footer
  width: 100%

///////////////////////////////////////////////////////////////


// MEDIA QUERIES

@media screen and (max-width: 1024px)
  $cols = 2
  $col = (800px *0.462)
  $gutter = (800px *0.075)
  .container
    width: ($col * $cols)+($gutter * $cols)
  .col
    margin-left: ($gutter/2)
    margin-right: ($gutter/2)
  for col in 1..$cols
    .col{col}
      width: ( col * $col ) + ( ( col - 1 ) * $gutter )

  .grid-sizer
    width: $col + $gutter

  .gutter-sizer
    width: $gutter

  // VARIABLES

  $margin-small = ($gutter)
  $margin-basic = ($gutter*2)
  $margin-large = ($gutter*5)

  // TYPOGRAPHY

  body
    font-size: $font-size-basic
    line-height: $font-leading-basic
    letter-spacing: $font-tracking-basic

  // HEADER

  #header
    height: $margin-basic

  // POSTS LOOP

  #main-content
    padding-top: $margin-basic

  .item
    margin-bottom: $margin-small
    margin-left: ($gutter/2)
    margin-right: ($gutter/2)

  // FOOTER

///////////////////////////////////////////////////////////////

@media screen and (max-width: 800px)
  $col = 2
  $col = (600px *0.462)
  $gutter = (600px *0.075)
  .container
    width: ($col * $cols)+($gutter * $cols)
  .col
    margin-left: ($gutter/2)
    margin-right: ($gutter/2)
  for col in 1..$cols
    .col{col}
      width: ( col * $col ) + ( ( col - 1 ) * $gutter )

  .grid-sizer
    width: $col + $gutter

  .gutter-sizer
    width: $gutter

  // VARIABLES

  $margin-small = ($gutter)
  $margin-basic = ($gutter*2)
  $margin-large = ($gutter*5)

  // TYPOGRAPHY

  body
    font-size: $font-size-basic
    line-height: $font-leading-basic
    letter-spacing: $font-tracking-basic

  // HEADER

  #header
    height: $margin-basic

  // POSTS LOOP

  #main-content
    padding-top: $margin-basic

  .item
    margin-bottom: $margin-small
    margin-left: ($gutter/2)
    margin-right: ($gutter/2)

  // FOOTER

///////////////////////////////////////////////////////////////

@media screen and (max-width: 600px)
  $cols = 1
  $col = 340px
  $gutter = 20px
  .container
    width: ($col * $cols)+($gutter * $cols)
  .col
    margin-left: ($gutter/2)
    margin-right: ($gutter/2)
  for col in 1..$cols
    .col{col}
      width: ( col * $col ) + ( ( col - 1 ) * $gutter )

  .grid-sizer
    width: $col + $gutter

  .gutter-sizer
    width: $gutter

  // VARIABLES

  $margin-small = ($gutter)
  $margin-basic = ($gutter*2)
  $margin-large = ($gutter*5)

  $font-size-basic = 15px

  // TYPOGRAPHY

  body
    font-size: $font-size-basic
    line-height: $font-leading-basic
    letter-spacing: $font-tracking-basic

  // HEADER

  #header
    height: $margin-basic

  // POSTS LOOP

  #main-content
    padding-top: $margin-basic

  .item
    margin-bottom: $margin-small
    margin-left: ($gutter/2)
    margin-right: ($gutter/2)

  // FORM

  #subscribe-email, #subscribe-submit
    width: 100%

  // FOOTER

///////////////////////////////////////////////////////////////

@media screen and (max-width: 400px)
  $cols = 1
  $col = 270px
  $gutter = 10px
  .container
    width: ($col * $cols)+($gutter * $cols)
  .col
    margin-left: ($gutter/2)
    margin-right: ($gutter/2)
  for col in 1..$cols
    .col{col}
      width: ( col * $col ) + ( ( col - 1 ) * $gutter )

  .grid-sizer
    width: $col + $gutter
  .gutter-sizer
    width: $gutter

  // VARIABLES

  $margin-small = ($gutter)
  $margin-basic = ($gutter*2)
  $margin-large = ($gutter*5)

  // TYPOGRAPHY

  body
    font-size: $font-size-basic
    line-height: $font-leading-basic
    letter-spacing: $font-tracking-basic

  // HEADER

  #header
    height: $margin-basic

  // POSTS LOOP

  #main-content
    padding-top: $margin-basic

  .item
    margin-bottom: $margin-small
    margin-left: ($gutter/2)
    margin-right: ($gutter/2)

  // FOOTER

